# Houdini-GIA-Tool

./: CMakeLists.txt  Collision.cpp  Collision.h  ConstraintMatrix.cpp  GETFEMMatrices.h  GIA_Data.hipnc  GetFEMMatrices.cpp  LICENSE  MaterialProperties.h  Placeholder.cpp  Placeholder.h  README.md  SIM_FEMSolver.cpp  SIM_FEMSolver.h  Solve_System.cpp  Solve_System.h  solve_linear_templates.cpp  templates.cpp
